syntax="proto3";

option java_multiple_files=true;
option java_package= "com.sdj3.logicServerSDJ3.protobuf.station2Protobuf";

message ReturnPartMessage {

  int32 id=1;
  string name = 2;
  double weight=3;
  int32 animalId=4;
  int32 trayId =5;
}
message PartMessage {

  string name = 2;
  double weight=3;
  int32 animalId=4;
  int32 trayId =5;
}
message TrayMessage{
  string  name = 1;
  int32 maxWeight = 2;
}
message ReturnMessage{
  string message = 1;
}
message ReturnTrayMessage{
  int32 id =1;
  string  name = 2;
  int32 maxWeight = 3;
}

service Station2Service{
  rpc createPart(PartMessage) returns(ReturnPartMessage);
  rpc createTray(TrayMessage) returns(ReturnMessage);
}

